--- a/styles.css
+++ b/styles.css
@@ -103,7 +103,7 @@ button:hover {
     right: 20px;
     font-size: 24px;
     cursor: pointer;
-    color: red;
+    color: rgb(246, 255, 0);
 }
 
 /* Responsive */
